test/visibility/private/uses/deeper.good
deeper.chpl:24: In function 'main':
deeper.chpl:25: error: 'first' undeclared (first use this function)
